public/stylesheets/main.css
.card {
    margin: 0.5em;
    padding-top: 0.5em;
    padding-bottom: 0em;
    padding-left: 1em;
    padding-right: 1em;
    border: 0.1em solid #CCC;
    width: 15em;
    float: left;
}

.card .text {
    font-size: 1.7em;
    color: #555;
    margin-bottom: 0.5em;
}

.remove {
    font-size: 1.7em;
    text-decoration: none;
    color: #555;
}

input[type=text] {
    outline: 0px;
    border: 0.1em solid #CCC;
    padding: 0.2em;
}

input.hint {
    color: #AAA;
}

.line-separator {
    clear: both;
    height: 0.6em;  
}

